--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/facebook": "^4.15.0",
+    "@ionic-native/google-plus": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
+    "@ionic-native/twitter-connect": "^4.15.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
