--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,11 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
+src/environment.ts
 www/
 $RECYCLE.BIN/
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
