--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-filepath": "1.4.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-ionic-webview": "1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -45,6 +45,7 @@
     "install": "^0.12.2",
     "ionic": "^4.1.2",
     "ionic-angular": "3.9.2",
+    "ionic-image-loader": "^6.3.2",
     "ionicons": "3.0.0",
     "npm": "^6.4.1",
     "rxjs": "5.5.11",
@@ -63,14 +64,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "android"
