--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic-native/twitter-connect": "^4.15.0",
     "@ionic/storage": "2.2.0",
+    "cordova": "^8.1.2",
     "cordova-android": "^7.1.1",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -43,7 +44,7 @@
     "cordova-sqlite-storage": "2.4.0",
     "firebase": "^5.5.2",
     "install": "^0.12.2",
-    "ionic": "^4.1.2",
+    "ionic": "^4.3.0",
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^6.3.2",
     "ionicons": "3.0.0",
