--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-filepath": "1.4.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -69,8 +68,7 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-filepath": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "android"
